--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -11,6 +11,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
     <meta name="orientation" content="portrait" />
     <meta
       name="viewport"
@@ -94,7 +99,7 @@
       }
 
       .modal-content {
-        background: linear-gradient(145deg, #2a2a2a, #1a1a1a);
+        background: var(--card-bg);
         margin: 15% auto;
         padding: 2rem;
         width: 90%;
@@ -103,6 +108,7 @@
         border: 2px solid var(--primary);
         box-shadow: 0 10px 30px rgba(255, 215, 0, 0.1);
         animation: modalSlideIn 0.3s ease-out;
+        border-color: #ffd700;
       }
 
       .modal-content h2 {
@@ -139,12 +145,142 @@
         gap: 10px;
         margin-top: 20px;
       }
+
+      .loader-wrapper {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: var(--secondary);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+        transition: opacity 0.5s, visibility 0.5s;
+      }
+
+      .loader {
+        width: 50px;
+        height: 50px;
+        border: 5px solid var(--primary);
+        border-bottom-color: transparent;
+        border-radius: 50%;
+        display: inline-block;
+        box-sizing: border-box;
+        animation: rotation 1s linear infinite;
+      }
+
+      @keyframes rotation {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+
+      .loader-hidden {
+        opacity: 0;
+        visibility: hidden;
+      }
+
+      /* Prevent content from being visible until DOM is loaded */
+      body {
+        opacity: 0;
+        transition: opacity 0.5s;
+      }
+
+      body.loaded {
+        opacity: 1;
+      }
     </style>
   </head>
   <body>
+    <div class="loader-wrapper">
+      <span class="loader"></span>
+    </div>
+
+    <div class="toast-container position-fixed top-0 end-0 p-3">
+      <!-- Success Toast -->
+      <div
+        id="successToast"
+        class="toast"
+        role="alert"
+        aria-live="assertive"
+        aria-atomic="true"
+      >
+        <div class="d-flex align-items-center text-white bg-success px-3 py-2">
+          <div class="toast-icon me-2">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="currentColor"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"
+              />
+            </svg>
+          </div>
+          <div
+            class="toast-body"
+            id="successToastMessage"
+            style="padding: 0"
+          ></div>
+          <button
+            type="button"
+            class="btn-close btn-close-white ms-auto"
+            data-bs-dismiss="toast"
+            aria-label="Close"
+          ></button>
+        </div>
+      </div>
+
+      <!-- Error Toast -->
+      <div
+        id="errorToast"
+        class="toast"
+        role="alert"
+        aria-live="assertive"
+        aria-atomic="true"
+      >
+        <div class="d-flex align-items-center text-white bg-danger px-3 py-2">
+          <div class="toast-icon me-2">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="currentColor"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
+              />
+              <path
+                d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"
+              />
+            </svg>
+          </div>
+          <div
+            class="toast-body"
+            id="errorToastMessage"
+            style="padding: 0"
+          ></div>
+          <button
+            type="button"
+            class="btn-close btn-close-white ms-auto"
+            data-bs-dismiss="toast"
+            aria-label="Close"
+          ></button>
+        </div>
+      </div>
+    </div>
+
     <header class="header">
       <nav class="nav-container">
-        <div style="width: 100px; display: flex; justify-content: left;">
+        <div style="width: 100px; display: flex; justify-content: left">
           <img
             src="image\png\BrandLogo.org - Western Union Logo.svg"
             alt="ImageScan Logo"
@@ -152,24 +288,117 @@
         </div>
         <a href="#" class="brand" style="justify-content: center">ImageScan</a>
         <!-- <div class="lang-selector">EN</div> -->
+        <button id="theme-toggle" class="theme-toggle">
+          <svg class="sun-icon" viewBox="0 0 24 24" width="24" height="24">
+            <circle cx="12" cy="12" r="5" fill="currentColor" />
+            <g>
+              <line
+                x1="12"
+                y1="1"
+                x2="12"
+                y2="3"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+              <line
+                x1="12"
+                y1="21"
+                x2="12"
+                y2="23"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+              <line
+                x1="4.22"
+                y1="4.22"
+                x2="5.64"
+                y2="5.64"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+              <line
+                x1="18.36"
+                y1="18.36"
+                x2="19.78"
+                y2="19.78"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+              <line
+                x1="1"
+                y1="12"
+                x2="3"
+                y2="12"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+              <line
+                x1="21"
+                y1="12"
+                x2="23"
+                y2="12"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+              <line
+                x1="4.22"
+                y1="19.78"
+                x2="5.64"
+                y2="18.36"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+              <line
+                x1="18.36"
+                y1="5.64"
+                x2="19.78"
+                y2="4.22"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+            </g>
+          </svg>
+          <svg class="moon-icon" viewBox="0 0 24 24" width="24" height="24">
+            <path
+              d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1-8.313-12.454z"
+            />
+          </svg>
+        </button>
       </nav>
     </header>
-    <button id="install-btn" style="display: none">Install App</button>
-    <div id="disclaimerModal" class="modal">
-      <div class="modal-content">
-        <div style="display: grid; justify-content: center">
-          <h2>Disclaimer</h2>
-        </div>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
-        <div class="buttons">
-          <button class="button" onclick="acceptAndCapture()">Accept</button>
+    <!-- <button id="install-btn" style="display: none">Install App</button> -->
+    <div
+      class="d-flex flex-column justify-content-center align-items-center w-100"
+    >
+      <div class="w-100"></div>
+      <div
+        id="disclaimerModal"
+        class="modal w-100"
+        style="display: flex; align-items: center"
+      >
+        <div class="modal-content">
+          <div style="display: grid; justify-content: center">
+            <h2>Disclaimer</h2>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <div class="buttons">
+            <button class="button" onclick="acceptAndCapture()">Accept</button>
+          </div>
         </div>
       </div>
+      <div class="w-100"></div>
     </div>
-
     <main class="container">
       <section class="hero">
         <h1>Extract Text from Images in Real-time</h1>
@@ -216,54 +445,91 @@
               </button>
             </div>
 
-            <div class="result-container">
+            <div
+              class="result-container"
+              id="resultContainer"
+              style="display: none"
+            >
               <div
                 id="actionButtons"
                 style="
-                  display: none;
+                  display: flex;
                   justify-content: center;
                   gap: 10px;
                   margin-bottom: 4%;
                 "
-              >
-                <button id="sendButton" class="button">Send</button>
-                <button id="discardButton" class="button">Discard</button>
-              </div>
+              ></div>
               <div id="loadingIndicator" style="display: none"></div>
               <div id="result" class="result"></div>
               <div id="apiResponse" class="api-response"></div>
+            </div>
+            <div
+              style="display: none"
+              id="sendDiscardButton"
+              class="button-group"
+            >
+              <button id="sendButton" class="button" style="margin-bottom: 5%">
+                Send
+              </button>
+              <button
+                id="discardButton"
+                class="button"
+                style="margin-bottom: 5%"
+              >
+                Discard
+              </button>
             </div>
           </div>
         </div>
       </div>
     </main>
 
-    <!-- <div id="appContainer" class="app-container">
-      <button id="install-btn" style="display: none">Install App</button>
-      <video id="video" autoplay playsinline></video>
-      <canvas id="canvas" style="display: none"></canvas>
-      <canvas id="previewCanvas" style="display: none"></canvas>
-      <div class="controls">
-        <button id="captureButton">Capture</button>
-        <button id="confirmButton" style="display: none">Confirm</button>
-        <button id="retryButton" style="display: none">Retry</button>
-      </div>
-      <div id="actionButtons" style="display: none">
-        <button id="sendButton">Send</button>
-        <button id="discardButton">Discard</button>
-      </div>
-      <div id="loadingIndicator" style="display: none"></div>
-      <div id="result" class="result"></div>
-      <div id="apiResponse" class="api-response"></div>
-    </div> -->
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="app.js"></script>
     <script src="js/opencv.js"></script>
     <script>
+      const toasts = {
+        success: new bootstrap.Toast(document.getElementById("successToast"), {
+          delay: 3000,
+          animation: true,
+        }),
+        error: new bootstrap.Toast(document.getElementById("errorToast"), {
+          delay: 3000,
+          animation: true,
+        }),
+      };
+
+      // Function to show toast
+      function showToast(message, type = "success") {
+        const toastElement = document.getElementById(`${type}ToastMessage`);
+        if (toastElement && toasts[type]) {
+          console.log("Showing toast...");
+          toastElement.textContent = message;
+          toasts[type].show();
+        }
+      }
+
+      document.addEventListener("DOMContentLoaded", () => {
+        const loaderWrapper = document.querySelector(".loader-wrapper");
+        const body = document.body;
+
+        // Small delay to ensure smooth transition
+        setTimeout(() => {
+          loaderWrapper.classList.add("loader-hidden");
+          body.classList.add("loaded");
+
+          // Remove loader from DOM after transition
+          loaderWrapper.addEventListener("transitionend", () => {
+            loaderWrapper.remove();
+          });
+        }, 500); // Adjust this delay as needed
+      });
+
       const modal = document.getElementById("disclaimerModal");
 
       window.onload = function () {
-        modal.style.display = "block";
+        modal.style.display = "flex";
+        modal.style.alignItems = "center";
       };
 
       function closeModal() {
