removed bounding box change

--- a/index.html
+++ b/index.html
@@ -433,11 +433,12 @@
             </div>
           </div> -->
           <!-- Replace the existing previewCanvas and resultContainer section with this -->
+          <canvas id="previewCanvas" style="display: none"></canvas>
         <div style="display: flex;gap: 5px;margin-top: 2px;margin-bottom: 2px;flex-wrap: nowrap;width: 100%;">
             <!-- Left side: Preview Canvas -->
-            <div style="flex: 1; min-width: 45%;">
+            <!-- <div style="flex: 1; min-width: 45%;">
             <canvas id="previewCanvas" style="display: none; width: 100%; height: auto; min-height: 200px; border-radius: 8px;"></canvas>
-            </div>
+            </div> -->
             
             <!-- Right side: Result Container -->
             <div style="flex: 1; min-width: 45%;">
