increasing height of the camera

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         overflow: hidden;
         background: #000;
         margin-bottom: var(--spacing-md);
+        height: max-content;
       }
 
       .hero {
