--- a/index.html
+++ b/index.html
@@ -280,13 +280,17 @@
 
     <header class="header">
       <nav class="nav-container">
-        <div style="width: 100px; display: flex; justify-content: left">
+        <!-- <div style="width: 100px; display: flex; justify-content: left">
           <img
             src="image\png\BrandLogo.org - Western Union Logo.svg"
             alt="ImageScan Logo"
           />
+        </div> -->
+        <div class="logo-section">
+          <img src="image/png/BrandLogo.org - Western Union Logo.svg" alt="ImageScan Logo" class="logo-img"/>
+          <a href="#" class="brand">ImageScan</a>
         </div>
-        <a href="#" class="brand" style="justify-content: center">ImageScan</a>
+        
         <!-- <div class="lang-selector">EN</div> -->
         <button id="theme-toggle" class="theme-toggle">
           <svg class="sun-icon" viewBox="0 0 24 24" width="24" height="24">
